[package]
name = "belugasnooze"
version = "0.4.0"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "belugasnooze - A pi based wake up light sunrise alarm clock"


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unused_async = "warn"
unwrap_used = "warn"
expect_used = "warn"
pedantic = "warn"
nursery = "warn"
todo = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"

[dependencies]
blinkt = "0.7"
dotenvy = "0.15"
figlet-rs = "0.1"
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = [
	"brotli",
	"gzip",
	"json",
	"rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-signal = "1.1"
sqlx = { version = "0.7", default-features = false, features = [
	"macros",
	"runtime-tokio-rustls",
	"sqlite",
] }
thiserror = "1.0"
time = { version = "0.3", features = ["local-offset"] }
time-tz = "2.0"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
uuid = {version = "1.7",features = ["v4","fast-rng"]}

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
