[package]
name = "belugasnooze"
version = "0.5.1"
edition = "2024"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "belugasnooze - A pi based wake up light sunrise alarm clock"


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unused_async = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"

[dependencies]
blinkt = "0.7"
dotenvy = "0.15"
figlet-rs = "0.1"
futures-util = "0.3"
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
mimalloc = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
	"brotli",
	"gzip",
	"json",
	"rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-signal = "1.1"
sqlx = { version = "0.8", default-features = false, features = [
	"macros",
	"runtime-tokio",
	"sqlite",
] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
uuid = {version = "1.16",features = ["v4","fast-rng"]}

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
