[package]
name = "belugasnooze"
version = "0.7.4"
edition = "2024"
authors = ["Jack Wills <email@mrjackwills.com>"]
description = "belugasnooze - A pi based wake up light sunrise alarm clock"
rust-version = "1.93.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unused_async = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"

[dependencies]
async-channel = "2.5"
dotenvy = "0.15"
figlet-rs = "1.0"
futures-util = "0.3"
jiff = { version = "0.2", features = ["tzdb-bundle-always"] }
mimalloc = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
	"brotli",
	"gzip",
	"json",
	"default-tls"
] }
rppal = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-signal = "1.1"
sqlx = { version = "0.8", default-features = false, features = [
	"macros",
	"runtime-tokio",
	"sqlite",
] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
uuid = {version = "1.23",features = ["v4","fast-rng"]}

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
